feat: enhance edit review dialog with branch information loading and validation improvements